--- a/css/common.css
+++ b/css/common.css
@@ -43,8 +43,168 @@
     background-color: #666;
 }
 
-.arrow-icon::after{
+.arrow-icon::after {
     content: '\e91e';
     font-family: 'icomoon';
     margin-left: 6px;
+}
+
+/* header模块 */
+.header {
+    position: relative;
+    height: 105px;
+}
+
+.logo {
+    position: absolute;
+    top: 25px;
+    width: 171px;
+    height: 61px;
+}
+
+.logo a {
+    display: block;
+    width: 171px;
+    height: 61px;
+    background: url('../images/logo.png') no-repeat;
+    font-size: 0px;
+}
+
+.search {
+    position: absolute;
+    width: 538px;
+    height: 36px;
+    left: 346px;
+    top: 25px;
+    border: 2px solid #b1191a;
+}
+
+.search input {
+    float: left;
+    width: 454px;
+    height: 32px;
+    padding-left: 10px;
+}
+
+.search button {
+    float: left;
+    width: 80px;
+    height: 32px;
+    background: #b1191a;
+    font-size: 16px;
+    color: #fff;
+}
+
+.hotwords {
+    position: absolute;
+    top: 66px;
+    left: 346px;
+}
+
+.hotwords a {
+    margin: 0 10px;
+}
+
+.shopcart {
+    position: absolute;
+    right: 60px;
+    top: 25px;
+    width: 140px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    background: #f7f7f7;
+    border: 1px solid #dfdfdf;
+}
+
+.shopcart::before {
+    content: '\e93a';
+    font-family: 'icomoon';
+    margin-right: 5px;
+    color: #b1191a;
+}
+
+.shopcart::after {
+    content: '\e920';
+    font-family: 'icomoon';
+    margin-left: 10px;
+}
+
+.count {
+    position: absolute;
+    top: -5px;
+    left: 105px;
+    height: 14px;
+    line-height: 14px;
+    background: #e60012;
+    border-radius: 7px 7px 7px 0;
+    color: #fff;
+    padding: 0px 5px;
+}
+
+/* nav导航栏 */
+.nav {
+    height: 47px;
+    border-bottom: 2px solid #b1191a;
+}
+
+.dropdown {
+    float: left;
+    width: 210px;
+    height: 45px;
+    background: #b1191a;
+}
+
+.navitems {
+    float: left;
+}
+
+.dropdown .dt {
+    height: 100%;
+    width: 100%;
+    line-height: 45px;
+    font-size: 16px;
+    color: #fff;
+    text-align: center;
+}
+
+.dropdown .dd {
+    width: 210px;
+    height: 465px;
+    background-color: #c81623;
+    margin-top: 2px;
+}
+
+.dropdown .dd ul li {
+    position: relative;
+    height: 31px;
+    line-height: 31px;
+    padding-left: 10px;
+}
+
+.dropdown .dd ul li::after {
+    position: absolute;
+    right: 10px;
+    top: 1px;
+    color: #fff;
+    font-family: 'icomoon';
+    content: '\e920';
+    font-size: 14px;
+}
+
+.dropdown .dd ul li a {
+    font-size: 14px;
+    color: #fff;
+}
+
+.navitems ul li {
+    float: left;
+}
+
+.navitems ul li a {
+    display: block;
+    height: 45px;
+    line-height: 45px;
+    font-size: 16px;
+    padding: 0 25px;
 }
