--- a/css/common.css
+++ b/css/common.css
@@ -208,3 +208,64 @@
     font-size: 16px;
     padding: 0 25px;
 }
+
+footer {
+    height: 415px;
+    background-color: #f5f5f5;
+    padding-top: 30px;
+}
+
+.mod_service {
+    height: 80px;
+    border-bottom: 1px solid #ccc;
+}
+
+.mod_service h5 {
+    float: left;
+    width: 50px;
+    height: 50px;
+    background: url('../images/icons.png') no-repeat -252px -2px;
+    margin-right: 8px;
+}
+
+.mod_service ul li {
+    float: left;
+    width: 300px;
+    height: 50px;
+    padding-left: 35px;
+}
+
+.service_txt h4 {
+    font-size: 14px;
+}
+
+.mod_help {
+    height: 185px;
+    border-bottom: 1px solid #ccc;
+    padding-top: 20px;
+    padding-left: 50px;
+}
+
+.mod_help dl {
+    float: left;
+    width: 200px;
+}
+
+.mod_help dl dt {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.mod_help dl:last-child {
+    width: 90px;
+    text-align: center;
+}
+
+.mod_copyright{
+    text-align: center;
+}
+
+.mod_copyright .links{
+    margin-bottom: 15px;
+}
+
